2013-12-30  Araki Ken  <arakiken@users.sf.net>

	* ml_model.c: Minor fixes.

	* mlterm/Makefile.in, ml_vt100_parser.c:
	  Read as large amount of data as possible from pty on NetBSD and
	  OpenBSD framebuffer for old machines.

2013-12-30  Araki Ken  <arakiken@users.sf.net>

	* jni/Android.mk: -DKIK_DEBUG is removed.

	* doc/en/README.fb, doc/ja/README.fb: Updated.

	* mlcc/comm.c, x_im_candidate_screen.c: Minor fixes.

2013-12-28  Araki Ken  <arakiken@users.sf.net>

	* android/jni/x_display.c:
	  - ANativeWindow_unlockAndPost() is not called in display_lock().
	  - AMotioinEvent_getY() - _display.yoffset

2013-12-28  Araki Ken  <arakiken@users.sf.net>

	* android/jni/x_display.c: _display.app = app in the first place in
	  x_display_init() because x_display_lock() can be called from update_window()
	  in init_window() if restarting mlterm from paused state.

2013-12-28  Araki Ken  <arakiken@users.sf.net>

	* android/jni/x_display.c, android/jni/x.h, MLActivity.java:
	  yoffset is added to the members of Display and the argumens of
	  MLActivity.visibleFrameChanged().

2013-12-26  Araki Ken  <arakiken@users.sf.net>

	* mlimgloader/none.c, gdk-pixbuf.c, gdiplus.cpp: Help message is added.

	* x_screen.c: "switch" value is available for x_screen_set_config().

2013-12-23  Araki Ken  <arakiken@users.sf.net>

	* fb/x_display_x68kgrf.c: x68k_set_tvram_cmap() and x68k_set_use_tvram_colors()
	  are changed to static functions.

	* fb/x_display.[ch]: x_display_enable_to_change_cmap() is added.

	* version.h.in: 3.3.2 -> 3.3.2post

2013-12-22  Araki Ken  <arakiken@users.sf.net>

	* fb/x_display.c: Only if _display.pixels_per_byte is 8, multiple planes
	  of scrolled lines are copied.

2013-12-21  Araki Ken  <arakiken@users.sf.net>

	* 3.3.2 released.
	  (tag "rel-3_3_2")

	* configure.in, mlterm.spec, main/version.h.in,
	  MLTermPty.c, android/jni/version.h, doc/en/ReleaseNote:
	  updated for 3.3.2.

2013-12-21  Araki Ken  <arakiken@users.sf.net>
